k8s/products.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  namespace: trendburada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: onuromertunc/trendburada:products
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: products
  namespace: trendburada
spec:
  selector:
    app: products
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
