k8s/profile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile
  namespace: trendburada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile
  template:
    metadata:
      labels:
        app: profile
    spec:
      containers:
      - name: profile
        image: onuromertunc/trendburada:profile
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: profile
  namespace: trendburada
spec:
  selector:
    app: profile
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
