k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: trendburada
  name: trendburada-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: trendburada.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/profile"
        backend:
          service:
            name: profile
            port:
              number: 80
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: products
            port:
              number: 80
      - pathType: Prefix
        path: "/order"
        backend:
          service:
            name: order
            port:
              number: 80
      - pathType: Prefix
        path: "/basket"
        backend:
          service:
            name: basket
            port:
              number: 80
